st:home-This will fix fonts of the h tags on the home page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,3 +64,28 @@
     color: #fff;
 }
 
+.home .max-width {
+    margin: auto 0 auto 40px;
+}
+
+.home .home-content .text-1{
+    font-size: 35px;
+    font-weight: 500;
+}
+
+.home .home-content .text-2{
+   font-size: 60px;
+   font-weight: 600;
+   margin-left: -3px;
+}
+
+.home .home-content .text-3{
+   font-size: 40px;
+   margin: 5px 0;
+}
+
+.home .home-content .text-3 span{
+    color: cadetblue;
+    font-weight: 800;
+}
+
