--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@
     position: fixed;
     width: 100%;
     z-index: 999;
-    background: cadetblue;
+    background: olivedrab;
     padding: 20px 0;
     transition: all 0.3s ease;
 }
@@ -46,13 +46,13 @@
 .navbar .menu li a {
     color: #fff;
     font-size: 17px;
-    font-weight: bold;
-    margin-left: 30px;
+    font-weight: bolder;
+    margin-left: 50px;
     transition: color 0.3s ease;
 }
 
 .navbar .menu li a:hover{
-    color: crimson;
+    color: #222;
 }
 
 /* Home Section Styling */
@@ -85,7 +85,15 @@
 }
 
 .home .home-content .text-3 span{
-    color: cadetblue;
+    color: olivedrab;
     font-weight: 800;
 }
+
+.home img{
+    background: olivedrab;
+    border-radius: 50%;
+    margin-top: 200px;
+    margin-left: 5px;
+}
+
 
