--- a/CSS/style.css
+++ b/CSS/style.css
@@ -113,10 +113,32 @@ header{
 .about{
     padding: 100px 0;
 }
-
-.about .about-content .left img{
-    height: 400px;
-    width: 400px;
-    object-fit: cover;
-    border-radius: 10px;
+.about .title{
+    position: relative;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+.about .title:before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+.about .title:after{
+    content: "who i am";
+    position: absolute;
+    bottom: -7px;
+    left: 50%;
+    font-size: 20px;
+    color: olivedrab;
+    padding: 5px;
+    background: #fff;
+    transform: translateX(-50%);
 }
