--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@200&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    scroll-behavior: smooth;
     /* font-family: 'Poppins', sans-serif; */
 }
 
@@ -13,13 +15,11 @@
     margin: auto;
 }
 
+
 /* Navbar Styling */
-header{
+.navbar{
     position: fixed;
     width: 100%;
-}
-
-.navbar{
     z-index: 999;
     background: olivedrab;
     padding: 20px 0;
@@ -32,7 +32,7 @@ header{
     justify-content: space-between;
 }
 
-.navbar .logo-text a {
+.navbar .logo a {
     position: absolute;
     float: left;
     margin-left: -30%;
@@ -44,7 +44,7 @@ header{
     font-family: 'Lobster', 'cursive';
 }
 
-.navbar .logo-text a span{
+.navbar .logo a span{
     color: black;
     transition: all 0.3s ease;
     font-family: 'Lobster', 'cursive';
@@ -68,6 +68,7 @@ header{
 .navbar .menu li a:hover{
     color: #222;
 }
+
 
 /* Home Section Styling */
 .home{
@@ -109,12 +110,18 @@ header{
     border-radius: 50%;
     margin-top: 220px;
 }
+.menu-btn{
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
+
 
 /* About section styling */
 .about{
     padding: 100px 0;
     width: 100%;
-   
 }
 
 .about .title{
@@ -125,6 +132,7 @@ header{
     margin-bottom: 60px;
     padding-bottom: 20px;
 }
+
 .about .title:before{
     content: "";
     position: absolute;
@@ -135,6 +143,7 @@ header{
     background: #111;
     transform: translateX(-50%);
 }
+
 .about .title:after{
     content: "who i am";
     position: absolute;
@@ -146,36 +155,48 @@ header{
     background: #fff;
     transform: translateX(-50%);
 }
+
 .about .about-content{
     display: flex;
     flex-wrap: wrap;
     align-content: center;
     justify-content: space-between;
 }
+
 .about .about-content .left{
      width: 45%;
 }
+
 .about .about-content .left img{
     height: 400px;
     width: 400px;
     object-fit: cover;
     border-radius: 10px;
 }
+
 .about .about-content .right{
     width: 55%;
 }
+
 #text{
     font-size: 15px;
     font-weight: bold;
 }
 
+
 /* Project section styling */
 .project{
     padding: 100px 0;
+    height: 190vh;
     width: 100%;
     color: #111;
     background: whitesmoke;
-   
+}
+
+#main{
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 400;
 }
 
 .project .title{
@@ -186,6 +207,7 @@ header{
     margin-bottom: 60px;
     padding-bottom: 20px;
 }
+
 .project .title:before{
     content: "";
     position: absolute;
@@ -196,6 +218,7 @@ header{
     background: #111;
     transform: translateX(-50%);
 }
+
 .project .title:after{
     content: "work done";
     position: absolute;
@@ -209,23 +232,21 @@ header{
 }
 
  .project .project-content {
-    /* padding: 100px 70px; */
     display: flex;
     flex-flow: row wrap;
-    
 }
 
 .project .project-content .box{
     height: 500px;
     width: 40%;
-    /* border: 1px solid olivedrab;  */
     box-shadow: 3px 3px 5px grey;
+    opacity: 0.85;
 }
 
 .project .project-content .box img{
     height: 300px;
     width: 100%;
-    /* object-fit: contain; */
+    object-fit: contain;
 }
 
 .txt{
@@ -233,31 +254,198 @@ header{
     font-weight: bold;
     color: olivedrab;
 }
-#box2{
-    margin-left: 85px;
+#box1,#box2{
+    margin-top: 30px;
 }
-#box3{
-    margin-top: 50px;
+#box2,#box4{
+    margin-left: 125px;
 }
-#box4{
-    margin-top: 50px;
-    margin-left: 85px;
+#box3,#box4{
+    margin-top: 80px;
 }
 
-/* #img1{
-  margin-left: 4px;
+.box:hover{
+    background: olivedrab;
 }
-#img2{
-    margin-left: 4px; 
+.txt:hover{
+    color: #fff;
 }
-#img3{
-    margin-left: 4px;
-}
-#img4{
-    margin-left: 4px; 
-} */
 
 
+/* Contact section styling */
+.contact{
+    padding: 100px 0;
+    height: 100vh;
+    width: 100%;
+    color: #111;   
+}
+
+.contact .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+
+.contact .title:before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+
+.contact .title:after{
+    content: "more info";
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: olivedrab;
+    padding: 5px;
+    background: whitesmoke;
+    transform: translateX(-50%);
+}
+
+
+/* Responsive media query */
+@media (max-width: 1300px){
+    .home .max-width{
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 1104px){
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px){
+    .max-width{
+        padding: 0 50px;
+    }
+}
+
+@media (max-width: 947px){
+    .menu-btn{
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active:before{
+        content: "olivedrab";
+   }
+   header{
+    position: fixed;
+    width: 100%;
+  }
+   .navbar .menu{
+    height: 50vh;
+    left: -100%;
+    top: 0;
+    background: olivedrab;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
+}
+.navbar .menu.active{
+    left: 0;
+}
+.navbar .menu li{
+    display: block;
+}
+.navbar .menu li a{
+    display: inline-block;
+    margin: 20px 0;
+    font-size: 25px;
+    color: #fff;
+}
+.home .home-content .text-2{
+    font-size: 70px;
+}
+
+.home .home-content .text-3{
+    font-size: 35px;
+}
+.home .home-content a{
+    font-size: 23px;
+    padding: 8px 18px;
+}
+.max-width{
+    max-width: 800px;
+}
+.about .about-content .column{ 
+    width: 50%;
+}
+.about .about-content .left{ 
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
+}
+.about .about-content .right{
+    flex: 100%;
+}
+}
+
+@media (max-width: 690px){
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content a{
+        font-size: 15px;
+        padding: 6px 16px;
+    }
+}
+@media (max-width: 510px){
+    .home{
+        height: 50vh;
+    }
+    .home .home-content .text-2{
+        font-size: 20px;
+    }
+    
+    .home .home-content .text-3{
+        font-size: 15px;
+    }
+
+    .home .home-content img{
+        height: 250px;
+        width: 250px;
+        background: olivedrab;
+        border-radius: 50%;
+        margin-top: 100px;
+
+    }
+    .project .project-content {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .project .project-content .box{
+        height: 400px;
+        width: 40%;
+        box-shadow: 3px 3px 5px grey;
+    }
+    
+    .project .project-content .box img{
+        height: 300px;
+        width: 100%;
+        
+    }
+}
 
 
 
