--- a/CSS/style.css
+++ b/CSS/style.css
@@ -202,7 +202,7 @@
 .project .title{
     position: relative;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
     margin-bottom: 60px;
     padding-bottom: 20px;
@@ -277,13 +277,14 @@
     padding: 100px 0;
     height: 100vh;
     width: 100%;
-    color: #111;   
+    color: #111; 
+    
 }
 
 .contact .title{
     position: relative;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
     margin-bottom: 60px;
     padding-bottom: 20px;
@@ -301,16 +302,60 @@
 }
 
 .contact .title:after{
-    content: "more info";
+    content: "get in touch";
     position: absolute;
     bottom: -12px;
     left: 50%;
     font-size: 20px;
     color: olivedrab;
     padding: 5px;
-    background: whitesmoke;
+    background: #fff;
     transform: translateX(-50%);
 }
+
+.contact .contact-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact .contact-content .column{
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .row i{
+    color: olivedrab;
+    font-size: 25px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Responsive media query */
